--- a/about.html
+++ b/about.html
@@ -15,14 +15,16 @@
 
   <body>  
     <div class="wrapper">
-      <nav>
-        <div class="container">
-          <ul>
-            <li class="link home-link"><a href="index.html">Hello</a></li>
-            <li class="link about-link"><a href="about.html">About</a></li>
-          </ul>
-        </div>  
-      </nav>
+      <header>
+        <nav>
+          <div class="container">
+            <ul>
+              <li class="link home-link"><a href="index.html">Hello</a></li>
+              <li class="link about-link"><a href="about.html">About</a></li>
+            </ul>
+          </div>  
+        </nav>
+      </header>
       
       <main id="about" class="animate fade-in">
         <section class="container">
