--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 
 <body>
   <div class="wrapper">
-    <nav>
-      <div class="container">
-        <ul>
-          <li class="link home-link"><a href="index.html">Hello</a></li>
-          <li class="link about-link"><a href="about.html">About</a></li>
-        </ul>
-      </div>  
-    </nav>
+    <header>
+      <nav>
+        <div class="container">
+          <ul>
+            <li class="link home-link"><a href="index.html">Hello</a></li>
+            <li class="link about-link"><a href="about.html">About</a></li>
+          </ul>
+        </div>  
+      </nav>
+    </header>
 
     <main id="home" class="animate fade-in">
       <div class="container">
