Fix sticky footer

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </section>       
       </main>
 
-      <footer>
+      <footer class="about">
         <p>&copy; <span class="year"></span> Valerie Seer</p>
       </footer>
     </div>
