Copy and styles updates

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <main id="about" class="animate fade-in">
         <section class="container">
           <div class="group">
-            <h1>I build websites and write code.</h1>
+            <h1>I design and write code.</h1>
             <p>I've worked with various clients large and small, with experiences ranging from building pages from the ground up via HTML/CSS/JS, to setting up and customizing WordPress and Squarespace themes.</p>
             <p>For a detailed look into my technical experience, <a href="seer_resume.pdf" target="_blank" class="pdf-link">you may view and download my resume here</a>.</p>
           </div>
