--- a/index.html
+++ b/index.html
@@ -3517,7 +3517,7 @@
                 </div>
               </div>
               <div class="card flex-item flex-item-300">
-                <img src="images/standard-health-provider" class="card-img-top" alt="">
+                <img src="images/standard-health-provider.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">Provider profile</h5>
                   <p class="card-text">Website design, development and deployment of a standardized healthcare provider profile page template. <br><br> UX research/design, Mustache.js, Bootstrap, jQuery.</p>
