Add copy in About section, add shadows to cards, update resume

--- a/index.html
+++ b/index.html
@@ -3472,7 +3472,8 @@
             <h2>Website design and development.</h2>
             <p class="location"><i class="fas fa-map-pin icon"></i>Chicago, IL</p>
             <p>Tech savvy with equal parts UX and communication acumen, I'm a creative problem-solver and autodidact with a passion for creating exceptional digital products. 
-            <p>A voracious reader by heart, I'm continuously keeping up with the latest web trends and best practices. </p>
+            <p>A voracious reader by heart, I'm continuously keeping up with the latest web trends and best practices.</p>
+            <p>Fun facts: Miami native, Northwestern University Alum</p>
             <a href="seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
             <div class="about-site">
               <p>This site is deployed on Github pages and was built with UX, performance, mobile, and accessability in mind. The technologies behind the scenes include:</p>
@@ -3500,7 +3501,7 @@
           <div class="col-md-12">
             <h2>Selected work</h2>
             <div class="d-flex flex-wrap justify-content-center">
-              <div class="card flex-item flex-item-300">
+              <div class="card shadow flex-item flex-item-300">
                 <img src="images/us-bank.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">US Bank MLO experience</h5>
@@ -3508,7 +3509,7 @@
                   <a href="https://mortgage.usbank.com/" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
-              <div class="card flex-item flex-item-300">
+              <div class="card shadow flex-item flex-item-300">
                 <img src="images/ati.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">ATI locator experience</h5>
@@ -3516,7 +3517,7 @@
                   <a href="https://www.atipt.com/locations" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
-              <div class="card flex-item flex-item-300">
+              <div class="card shadow flex-item flex-item-300">
                 <img src="images/standard-health-provider.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">Provider profile</h5>
