Fix copy in Selected work cards

--- a/index.html
+++ b/index.html
@@ -3505,7 +3505,7 @@
                 <img src="images/us-bank.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">US Bank MLO experience</h5>
-                  <p class="card-text">Website development and deployment of the entire US Bank MLO experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, jQuery.</p>
+                  <p class="card-text">Website development and deployment of the entire US Bank MLO experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS.</p>
                   <a href="https://mortgage.usbank.com/" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
@@ -3513,7 +3513,7 @@
                 <img src="images/ati.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">ATI locator experience</h5>
-                  <p class="card-text">Website development and deployment of the entire ATI locator experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, jQuery.</p>
+                  <p class="card-text">Website development and deployment of the entire ATI locator experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS.</p>
                   <a href="https://www.atipt.com/locations" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
