Update Selected works, fix header hover css

--- a/index.html
+++ b/index.html
@@ -3314,10 +3314,7 @@
       font-size: .9rem;
       font-weight: 800;
     }
-    header nav ul li a:hover {
-      text-decoration: none;
-    }
-    header nav ul li:before {
+    header nav ul li a:before {
       height: 0.1563rem;
       content: "";
       position: absolute;
@@ -3326,7 +3323,10 @@
       bottom: -0.4rem;
       transition: all 200ms ease-out 0s;
     }
-    header nav ul li:hover::before {
+    header nav ul li a:hover {
+      text-decoration: none;
+    }
+    header nav ul li a:hover::before {
       width: 100%;
     }
     @media (max-width: 576px) {
@@ -3518,11 +3518,11 @@
                 </div>
               </div>
               <div class="card shadow flex-item flex-item-300">
-                <img src="images/standard-health-provider.png" class="card-img-top" alt="">
+                <img src="images/inQuicker-wireframe.png" class="card-img-top" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Provider profile</h5>
-                  <p class="card-text">Website design, development and deployment of a standardized healthcare provider profile page template. <br><br> UX research/design, Mustache.js, Bootstrap, jQuery.</p>
-                  <a href="https://health.localsearchprofiles.com/simon-chau-chicago-cardiology" target="_blank" class="btn btn-primary-outline">View work</a>
+                  <h5 class="card-title">Appointment scheduling wireframe</h5>
+                  <p class="card-text">Wireframe design and development of an appointment scheduling widget for a healthcare client page. <br><br> UX research/design, Illustrator, Mustache.js, Bootstrap, jQuery.</p>
+                  <a href="inQuicker-wireframe.pdf" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
             </div>
