Add Behance icon

--- a/index.html
+++ b/index.html
@@ -3183,6 +3183,9 @@
     .fa-codepen:before {
       content: "\f1cb"; 
     }
+    .fa-behance:before {
+      content: "\f1b4"; 
+    }
   </style>
 
   <!--Colors, typography, links, buttons -->
@@ -3543,6 +3546,9 @@
               </li>
               <li>
                 <a href="https://codepen.io/valerieseer/" target="_blank" aria-label="CodePen"><i class="fab fa-codepen icon"></i></a>
+              </li>
+              <li>
+                <a href="https://www.behance.net/valerieseer" target="_blank" aria-label="Behance"><i class="fab fa-behance icon"></i></a>
               </li>
               <li>
                 <a href="mailto:seervalerie@gmail.com" class="email">Email</a>
