--- a/index.html
+++ b/index.html
@@ -3474,7 +3474,7 @@
           <div class="col-md-7">
             <h2>Website design and development.</h2>
             <p class="location"><i class="fas fa-map-pin icon"></i>Chicago, IL</p>
-            <p>Tech savvy with equal parts UX and communication acumen, I'm a creative problem-solver and autodidact with a passion for creating exceptional digital products. 
+            <p>Tech savvy with equal parts UX and communication acumen, I'm a creative problem-solver with a passion for creating exceptional digital products. 
             <p>A voracious reader by heart, I'm continuously keeping up with the latest web trends and best practices.</p>
             <p>Fun facts: Miami native, Northwestern University Alum</p>
             <a href="seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
