--- a/index.html
+++ b/index.html
@@ -3472,14 +3472,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h2>Website design and development.</h2>
+            <h2>Front End Web Development</h2>
             <p class="location"><i class="fas fa-map-pin icon"></i>Chicago, IL</p>
-            <p>Tech savvy with equal parts UX and communication acumen, I'm a creative problem-solver with a passion for creating exceptional digital products. 
-            <p>A voracious reader by heart, I'm continuously keeping up with the latest web trends and best practices.</p>
+            <p>Web developer with a proven ability to design and develop complex interactive web interfaces. Proficient in HTML, CSS, JavaScript/jQuery, and currently learning React.</p>
+            <p>Expert knowledge in UX best practices, ADA compliance, performance optimization, and cross-browser development. </p>
             <p>Fun facts: Miami native, Northwestern University Alum</p>
             <a href="seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
             <div class="about-site">
-              <p>This site is deployed on Github pages and was built with UX, performance, mobile, and accessability in mind. The technologies behind the scenes include:</p>
+              <p>This site is deployed on Github pages and was built with UX, performance, mobile, and accessability in mind. It was built behind the scenes with:</p>
               <ul>
                 <li>Vanilla HTML5 and CSS3</li>
                 <li>jQuery 3.5.1</li>
@@ -3508,15 +3508,15 @@
                 <img src="images/us-bank.png" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title">US Bank MLO experience</h5>
-                  <p class="card-text">Website development and deployment of the entire US Bank MLO experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS.</p>
+                  <p class="card-text">Website development and deployment of the entire US Bank MLO experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS, Jenkins.</p>
                   <a href="https://mortgage.usbank.com/" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
               <div class="card shadow flex-item flex-item-300">
                 <img src="images/ati.png" class="card-img-top" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">ATI locator experience</h5>
-                  <p class="card-text">Website development and deployment of the entire ATI locator experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS.</p>
+                  <h5 class="card-title">ATI locations experience</h5>
+                  <p class="card-text">Website development and deployment of the entire ATI locations experience, from locators to profile pages.<br><br> Gulp.js, Git, Mustache.js, jQuery, Bootstrap, LESS, Jenkins.</p>
                   <a href="https://www.atipt.com/locations" target="_blank" class="btn btn-primary-outline">View work</a>
                 </div>
               </div>
