--- a/index.html
+++ b/index.html
@@ -15,31 +15,40 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
   <script src="https://kit.fontawesome.com/f1d0bb7021.js" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </head>
 
 <body>
   <div id="home"></div>
-  <header>
+  <header id="header">
     <div class="container">
-      <nav class="navbar-nav">
-        <ul class="d-flex align-items-center list-inline">
-          <li class="link"><a href="#home">Hello</a></li>
-          <li class="link"><a href="#about">About</a></li>
-          <li class="link"><a href="#work">work</a></li>
-          <li class="link"><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="row">   
+        <div class="col-12">
+          <nav class="navbar-nav">
+            <ul class="d-flex align-items-center list-inline">
+              <li class="link"><a href="#home">Hello</a></li>
+              <li class="link"><a href="#about">About</a></li>
+              <li class="link"><a href="#work">work</a></li>
+              <li class="link"><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>  
   </header>
 
   <main class="animate fade-in">
     <section id="hero">
       <div class="container">
-        <div class="content d-flex align-items-center">
-          <div class="info">
-            <h1>Valerie Seer</h1>
-            <h2>Web Developer</h2>
-          </div>
+        <div class="row">   
+          <div class="col-12">
+            <div class="content d-flex align-items-center">
+              <div class="info">
+                <h1>Valerie Seer</h1>
+                <h2>Web Developer</h2>
+              </div>
+            </div>
+          </div>    
         </div>  
       </div>  
     </section>  
@@ -77,7 +86,7 @@
     <section id="work" class="section"> 
       <div class="container">
         <div class="row">   
-          <div class="col-md-12">
+          <div class="col-12">
             <h2>Selected work</h2>
             <div class="d-flex flex-wrap justify-content-center">
               <div class="card shadow flex-item flex-item-300">
@@ -113,7 +122,7 @@
     <section id="contact" class="section">
       <div class="container">
         <div class="row">    
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <h2>Let's connect</h2>
             <p>Relevant links:</p>
             <ul class="list-group list-group-horizontal">
@@ -131,7 +140,7 @@
               </li>
             </ul>
           </div>  
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <iframe title="contact" class="contact-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfbvu_G2VJ7E0bMMiCPOQbtcoRfnsQ0vUbJiQ9i044dKfwqFg/viewform?embedded=true" width="100%" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
         </div>  
@@ -139,40 +148,16 @@
     </section>
   </main>
 
-  <footer>
+  <foote id="footer">
     <div class="container">
-      <div class="content d-flex">
-        <p>&copy; <span class="year"></span> Valerie Seer</p>
-      </div>
+      <div class="row">   
+        <div class="col-12">
+          <div class="content d-flex">
+            <p>&copy; <span class="year"></span> Valerie Seer</p>
+          </div>
+        </div>
+      </div>    
     </div>
   </footer>
-
-  <!-- Custom js -->
-  <script>
-    function animateTo(div, dfix, mfix) {
-      if ($(window).width() > 768) {
-        $("html, body").animate({ 
-          scrollTop: $(div).offset().top - dfix
-        }, 700);
-      } else {
-        $("html, body").animate({ 
-          scrollTop: $(div).offset().top - mfix
-        }, 700);
-      } 
-    }
-
-    (function() {
-      $("header .link a").on("click", function() {
-        var dest = $(this).attr("href");
-        animateTo(dest, 120, 100);
-        return false;
-      });	
-    })();
-
-    // Append dynamic copyright year  
-    (function() {
-      document.getElementsByClassName("year")[0].textContent = new Date().getFullYear();
-    })();
-  </script>
 </body>
 </html>
