--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="content d-flex align-items-center">
               <div class="info">
                 <h1>Valerie Seer</h1>
-                <h2>Web Developer</h2>
+                <h2>Web UI Developer</h2>
               </div>
             </div>
           </div>    
@@ -59,7 +59,7 @@
           <div class="col-md-7">
             <h2>Front End Web Development</h2>
             <p class="location"><i class="fas fa-map-pin icon"></i>Chicago, IL</p>
-            <p>Web developer with a proven ability to design and develop complex interactive web interfaces. Proficient in HTML, CSS, JavaScript/jQuery, and currently learning React.</p>
+            <p>Web UI developer with a proven ability to design and develop complex interactive web interfaces. Proficient in HTML, CSS, JavaScript/jQuery, and currently learning React.</p>
             <p>Expert knowledge in UX best practices, ADA compliance, performance optimization, and cross-browser development. </p>
             <p>Fun facts: Miami native, Northwestern University Alum</p>
             <a href="seer_resume.pdf" target="_blank" class="pdf-link">Download resume</a>
